istio/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: order
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-v1
  labels:
    app: order
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: order-details
      containers:
        - name: order
          image: order:latest # Local image name
          imagePullPolicy: Never # Ensures Kubernetes doesn't try to pull from a registry
          ports:
            - containerPort: 8000
---
