istio/product-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  labels:
    app: product
    service: product
spec:
  ports:
    - port: 9090
      name: http
  selector:
    app: product

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v1
  labels:
    app: product
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
      version: v1
  template:
    metadata:
      labels:
        app: product
        version: v1
    spec:
      serviceAccountName: product-details
      containers:
        - name: product
          image: product:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v2
  labels:
    app: product
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
      version: v2
  template:
    metadata:
      labels:
        app: product
        version: v2
    spec:
      serviceAccountName: product-details
      containers:
        - name: product
          image: product-v2:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
---
