istio/shared-gatway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shared-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway   # This must match your ingressgateway's label
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "airline.local"
