istio/product-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: product-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productinfo
spec:
  hosts:
  - "*"
  gateways:
  - product-gateway
  http:
  - match:
    - uri:
        exact: /product
    route:
    - destination:
        host: product
        port:
          number: 9090
