istio/product-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
  namespace: default
spec:
  hosts:
    - "product"
  gateways:
    - product-gateway
  http:
    - route:
        - destination:
            host: product
            subset: v1
            port:
              number: 9090
          weight: 80 # 80% saobraćaja ide ka v1
        - destination:
            host: product
            subset: v2
            port:
              number: 9090
          weight: 20 # 20% saobraćaja ide ka v2
