istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: airline
  namespace: default
spec:
  hosts:
    - "airline.local"
  gateways:
    - shared-gateway
  http:
    - match:
        - uri:
            prefix: /api/auth
      route:
        - destination:
            host: auth
            port:
              number: 8000
    - match:
        - uri:
            prefix: /api/flight
      route:
        - destination:
            host: flight
            port:
              number: 9090
    - match:
        - uri:
            prefix: /api/notification
      route:
        - destination:
            host: notification
            port:
              number: 9000
    - match:
        - uri:
            prefix: /api/reservation
      route:
        - destination:
            host: reservation
            port:
              number: 9000
    - match:
        - uri:
            prefix: /api/payment
      route:
        - destination:
            host: payment
            port:
              number: 8083
